--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ rvm:
   - 2.0.0
   - 2.1.*
   - 2.2.*
+gemfile:
+  - Gemfile
+  - rspec-2.99.x.gemfile
 script: bundle exec rake spec && bundle exec rspec --tag before_load spec
