--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .config
 .yardoc
 Gemfile.lock
+gemfiles/*.lock
 InstalledFiles
 _yardoc
 coverage
@@ -18,4 +19,3 @@ tmp
 vendor
 .DS_Store
 spec/stepdoc
-
